# mobile_robot_ws

./: AUTONOMOUS_ROBOT_ROADMAP.md  COMMANDS_REFERENCE.md  README.md  SolidWorks_ROS2_Gazebo_Guide.md  check_gazebo.sh  debug_robot.urdf  debug_topics.sh  frames_2025-08-03_17.32.34.gv  minimal_test.urdf  physics_test.urdf  test_joint_control.sh  test_manual_control.sh  test_manual_joints.urdf  test_minimal.launch.py  test_physics.sh  test_robot.sh  test_robot_simple.py  test_working_robot.sh  working_robot.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mobile_robot/lib/mobile_robot/: teleop_keyboard  tray_controller
install/mobile_robot/share/ament_index/resource_index/parent_prefix_path/: mobile_robot
install/mobile_robot/share/mobile_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mobile_robot/share/mobile_robot/cmake/: mobile_robotConfig.cmake
install/mobile_robot/share/mobile_robot/config/: mobile_robot.rviz
install/mobile_robot/share/mobile_robot/launch/: display.launch.py  manual_control.launch.py  test_transforms.launch.py
install/mobile_robot/share/mobile_robot/meshes/: frontCasterLink.STL  palet.STL  rightWheelLink.STL
install/mobile_robot/share/mobile_robot/urdf/: mobile_robot.csv
log/: latest_build
src/mobile_robot/: CMakeLists.txt
src/mobile_robot/config/: joint_names_mobile_robot.yaml
src/mobile_robot/launch/: gazebo.launch.py
src/mobile_robot/meshes/: aktarici.STL  backCasterLink.STL  base_link.STL  leftWheeltLink.STL  outerBodyLink.STL  trayLink.STL
src/mobile_robot/src/: mobile_robot_controller.cpp  teleop_keyboard.cpp  tray_controller.cpp  tray_joint_relay.cpp
src/mobile_robot/urdf/: mobile_robot.sdf  mobile_robot.urdf
